--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/125/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/125/index.mdx
@@ -80,6 +80,7 @@ Devon (Adobe) vient d'annoncer la sortie de hooks de drag & drop accessibles pou
 - 🎥 [Using Fonts in Next.js](https://www.youtube.com/watch?v=L8_98i_bMMA)
 - 🎥 [RIP React Router?](https://www.youtube.com/watch?v=LVzG3nncE4M): met en avant le nouveau [TanStack Router](https://tanstack.com/router/v1)
 - 📦 [Remotion 3.3](https://twitter.com/remotion_dev/status/1593156143249260544)
+- 📦 [tRPC 10](https://trpc.io/blog/announcing-trpc-10): grosse refonte de tRPC qui améliore sa DX. Cette librairie qui facilite les appels backends typesafe fait de plus en plus d'adeptes. Elle peut être utilisée dans l'écosystème React grace aux packages d'intégration (Next, React-Query...). J'adore la tagline "Move Fast and Break Nothing" 😄
 - 📦 [Openblocks - The Open Source Retool Alternative](https://github.com/openblocks-dev/openblocks)
 - 📦 [Jotai 1.10](https://twitter.com/jotaijs/status/1593647952672608257)
 
@@ -146,10 +147,9 @@ Nous cherchons des développeurs(euses) JavaScript passionnés. Vous interviendr
 ## 🔀 Autre {#other}
 
 - [An Interactive Guide to Flexbox](https://www.joshwcomeau.com/css/interactive-guide-to-flexbox/): super article de Josh Comeau, a ne pas lire si vous avez faim 😄
-- [Browsers, JSON, and FormData](https://blog.jim-nielsen.com/2022/browsers-json-formdata/): article avec des idées intéressantes sur le progressive enhancement, qui incite à créer des APIS basées sur FormData plutôt que JSON. Ca me parle, et d'ailleurs mes formulaires de signup de la newsletter fonctionnent aussi sans JavaScript 🤗
+- [Browsers, JSON, and FormData](https://blog.jim-nielsen.com/2022/browsers-json-formdata/): article avec des idées intéressantes sur le progressive enhancement, qui incite à créer des APIS basées sur FormData plutôt que JSON. Ca me parle, et d'ailleurs mes formulaires de signup de la newsletter fonctionnent aussi sans JavaScript 🤗 L'article n'est pas lié à React mais est écrit par Jim qui travaille sur Remix.
 - [Top-level promise handling in Node.js ES modules](https://www.stefanjudis.com/today-i-learned/top-level-promise-handling-in-node-js/): je découvre ce comportement de Node.js pas hyper intuitif et le code exit 13.
-- [tRPC 10](https://trpc.io/blog/announcing-trpc-10) + https://twitter.com/alexdotjs/status/1594623014267658242
-- [State Of JavaScript 2022 Survey](https://survey.devographics.com/survey/state-of-js/2022)
+- [State Of JavaScript 2022 Survey](https://survey.devographics.com/survey/state-of-js/2022): content d'y voir [Docusaurus faire son entrée](https://twitter.com/sebastienlorber/status/1594748405280116738) cette année! J'espère que ma newsletter sera dans les resources l'année prochaine, n'hésitez pas à l'envoyer en suggestion 😏
 - [The 2022 State of JavaScript Survey Is Now Open. Here's What's New](https://dev.to/sachagreif/take-the-2022-state-of-javascript-survey-5ap6)
 - [Web technology optimism hour](https://macwright.com/2022/11/18/optimism-updates.html)
 - [Movies app in 7 frameworks - which is fastest and why?](https://www.builder.io/blog/movies-app-in-7-frameworks-which-is-fastest-and-why)
