--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/125/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/125/index.mdx
@@ -190,6 +190,7 @@ Nous cherchons des développeurs(euses) JavaScript passionnés. Vous interviendr
 - [MPA View Transitions - First demo - Chrome canary](https://twitter.com/addyosmani/status/1592907811968626688)
 - [Mock Service Worker - Fetch API Support Beta](https://github.com/mswjs/msw/discussions/1464)
 - [What’s so great about functional programming anyway?](https://jrsinclair.com/articles/2022/whats-so-great-about-functional-programming-anyway/)
+- [Prettier 2.8: improve --cache CLI option and TypeScript 4.9 satisfies operator!](https://prettier.io/blog/2022/11/23/2.8.0.html)
 - [Angular 15](https://blog.angular.io/angular-v15-is-now-available-df7be7f2f4c8)
 - [Nuxt 3.0](https://nuxt.com/v3)
 - [Playwright 1.28](https://github.com/microsoft/playwright/releases/tag/v1.28.0)
@@ -201,6 +202,7 @@ Nous cherchons des développeurs(euses) JavaScript passionnés. Vous interviendr
 - [Build a More Secure Web using npm with Deno](https://deno.com/blog/a-more-secure-npm)
 - [From Bootstrapped to Venture-Backed: Nx Raises $8.6M](https://blog.nrwl.io/from-bootstrapped-to-venture-backed-nx-raises-8-6m-2ae2228eff76)
 - [Why you should never use px to set font-size in CSS](https://joshcollinsworth.com/blog/never-use-px-for-font-size)
+- [The Windows Subsystem for Linux is now generally available](https://devblogs.microsoft.com/commandline/the-windows-subsystem-for-linux-in-the-microsoft-store-is-now-generally-available-on-windows-10-and-11/)
 
 ---
 
