--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/125/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/125/index.mdx
@@ -9,16 +9,15 @@ unlisted: true
 
 Salut à tous !
 
-Black friday? todo
+C'est la semaine du **[Black Friday](/blackfriday)**. J'ai préparé pour vous une page que je vais tenir à jour avec les meilleurs deals pour un dev React. J'en ai déjà trouvé quelques uns, mais certains ne sont pas encore annoncés, alors revenez vendredi ;)
 
-Meetup RN Paris:
-https://www.meetup.com/fr-FR/meetup-group-xaaafwks/
+J'ai enfin l'occasion de mettre tRPC à l'honneur, avec des sorties officielles et un super article qui le compare à GraphQL!
 
-- Slack https://reactnativeconnection.slack.com/
+Pour info, il y a un nouveau meetup [React-Native Paris](https://www.meetup.com/fr-FR/meetup-group-xaaafwks/) avec une 1ere date (6 Décembre). Rejoignez aussi le Slack [React-Native Connection](https://reactnativeconnection.slack.com/). Il est probable qu'une conférence sur le développement mobile arrive prochainement 😜 et j'espère bien qu'une conf React fera également son retour!
 
-State of JS 2022 - https://survey.devographics.com/survey/state-of-js/2022
+Les [vidéos](https://www.youtube.com/watch?v=uZnXwuhYZBc&list=PL53Z0yyYnpWjIoe0wNozVbuRXOnVcETPw) de la conférence React Brussels sont en ligne. Je pense y aller l'année prochaine, histoire de rencontrer la communauté React de Belgique!
 
-Videos React brussels
+N'oubliez pas de remplir le sondage [State Of JS](https://survey.devographics.com/survey/state-of-js/2022) qui vient d'ouvrir! content d'y trouver Docusaurus cette année. 🙏 N'hésitez pas à suggérer la newsletter pour les resources 😏 (utilisez le nom Anglais: "This Week In React")
 
 <!-- truncate -->
 
