--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/125/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/125/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /125
-title: "React Hebdo #125: ..."
+title: "React Hebdo #125: tRPC, T3, Remix, Zustand, Server Components, Drag & Drop, Forms, Gatsby, Remotion, React-Native, Skia..."
 authors: [slorber]
 date: 11-22-2022
 image: /img/TWIR_POST.png
@@ -9,7 +9,7 @@ unlisted: true
 
 Salut à tous !
 
-C'est la semaine du **[Black Friday](/blackfriday)**. J'ai préparé pour vous une page que je vais tenir à jour avec les meilleurs deals pour un dev React. J'en ai déjà trouvé quelques uns, mais certains ne sont pas encore annoncés, alors revenez vendredi ;)
+C'est la semaine du **[Black Friday](/blackfriday)**. J'ai préparé pour vous une page que je vais tenir à jour avec les meilleurs deals pour un dev React. J'en ai déjà trouvé quelques-uns, mais certains ne sont pas encore annoncés, alors revenez vendredi ;)
 
 J'ai enfin l'occasion de mettre tRPC à l'honneur, avec des sorties officielles et un super article qui le compare à GraphQL!
 
