--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/125/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/125/index.mdx
@@ -4,12 +4,13 @@ title: "React Hebdo #125: tRPC, T3, Remix, Zustand, Server Components, Drag & Dr
 authors: [slorber]
 date: 11-22-2022
 image: /img/TWIR_POST.png
-unlisted: true
 ---
 
 Salut à tous !
 
 C'est la semaine du **[Black Friday](/blackfriday)**. J'ai préparé pour vous une page que je vais tenir à jour avec les meilleurs deals pour un dev React. J'en ai déjà trouvé quelques-uns, mais certains ne sont pas encore annoncés, alors revenez vendredi ;)
+
+[![Black Friday 2022 Banner](/img/BLACK_FRIDAY_2022.png)](/blackfriday)
 
 J'ai enfin l'occasion de mettre tRPC à l'honneur, avec des sorties officielles et un super article qui le compare à GraphQL!
 
